Extract spatial API to a dedicated module and migrate corresponding classes